--- a/src/assets/font_404119_cl5py42rpqk0rudi/demo_fontclass.html
+++ b/src/assets/font_404119_cl5py42rpqk0rudi/demo_fontclass.html
@@ -91,6 +91,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont icon-dianpu"></i>
+                    <div class="name">店铺</div>
+                    <div class="fontclass">.icon-dianpu</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont icon-newshotfill"></i>
                     <div class="name">news_hot_fill</div>
                     <div class="fontclass">.icon-newshotfill</div>
