--- a/src/assets/font_404119_cl5py42rpqk0rudi/demo_symbol.html
+++ b/src/assets/font_404119_cl5py42rpqk0rudi/demo_symbol.html
@@ -133,6 +133,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-dianpu"></use>
+                    </svg>
+                    <div class="name">店铺</div>
+                    <div class="fontclass">#icon-dianpu</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-newshotfill"></use>
                     </svg>
                     <div class="name">news_hot_fill</div>
