--- a/src/assets/font_404119_cl5py42rpqk0rudi/demo_unicode.html
+++ b/src/assets/font_404119_cl5py42rpqk0rudi/demo_unicode.html
@@ -111,6 +111,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe698;</i>
+                    <div class="name">店铺</div>
+                    <div class="code">&amp;#xe698;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe7c4;</i>
                     <div class="name">news_hot_fill</div>
                     <div class="code">&amp;#xe7c4;</div>
